# saytoai-shared

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
saytoai_shared/: __init__.py  constants.py  prompts.py  utils.py
saytoai_shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
saytoai_shared/schemas/: __init__.py  auth.py  fraud_prevention.py  payments.py  roles.py  service.py  sms.py  user.py
saytoai_shared/services/: __init__.py  sms_service.py
tests/: __init__.py  test_imports.py  test_user.py  test_utils.py
